moreReadable/parser.output
State 11 conflicts: 4 shift/reduce
State 12 conflicts: 4 shift/reduce
State 13 conflicts: 4 shift/reduce
State 14 conflicts: 4 shift/reduce


Grammar

    0 $accept: calculation $end

    1 calculation: ε
    2            | calculation line

    3 line: expr EOL

    4 expr: NUMBER
    5     | expr PLUS expr
    6     | expr MINUS expr
    7     | expr TIMES expr
    8     | expr DIVIDE expr


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    NUMBER (258) 4
    PLUS (259) 5
    MINUS (260) 6
    TIMES (261) 7
    DIVIDE (262) 8
    EOL (263) 3


Nonterminals, with rules where they appear

    $accept (9)
        on left: 0
    calculation (10)
        on left: 1 2
        on right: 0 2
    line (11)
        on left: 3
        on right: 2
    expr (12)
        on left: 4 5 6 7 8
        on right: 3 5 6 7 8


State 0

    0 $accept: • calculation $end

    $default  reduce using rule 1 (calculation)

    calculation  go to state 1


State 1

    0 $accept: calculation • $end
    2 calculation: calculation • line

    $end    shift, and go to state 2
    NUMBER  shift, and go to state 3

    line  go to state 4
    expr  go to state 5


State 2

    0 $accept: calculation $end •

    $default  accept


State 3

    4 expr: NUMBER •

    $default  reduce using rule 4 (expr)


State 4

    2 calculation: calculation line •

    $default  reduce using rule 2 (calculation)


State 5

    3 line: expr • EOL
    5 expr: expr • PLUS expr
    6     | expr • MINUS expr
    7     | expr • TIMES expr
    8     | expr • DIVIDE expr

    PLUS    shift, and go to state 6
    MINUS   shift, and go to state 7
    TIMES   shift, and go to state 8
    DIVIDE  shift, and go to state 9
    EOL     shift, and go to state 10


State 6

    5 expr: expr PLUS • expr

    NUMBER  shift, and go to state 3

    expr  go to state 11


State 7

    6 expr: expr MINUS • expr

    NUMBER  shift, and go to state 3

    expr  go to state 12


State 8

    7 expr: expr TIMES • expr

    NUMBER  shift, and go to state 3

    expr  go to state 13


State 9

    8 expr: expr DIVIDE • expr

    NUMBER  shift, and go to state 3

    expr  go to state 14


State 10

    3 line: expr EOL •

    $default  reduce using rule 3 (line)


State 11

    5 expr: expr • PLUS expr
    5     | expr PLUS expr •
    6     | expr • MINUS expr
    7     | expr • TIMES expr
    8     | expr • DIVIDE expr

    PLUS    shift, and go to state 6
    MINUS   shift, and go to state 7
    TIMES   shift, and go to state 8
    DIVIDE  shift, and go to state 9

    PLUS      [reduce using rule 5 (expr)]
    MINUS     [reduce using rule 5 (expr)]
    TIMES     [reduce using rule 5 (expr)]
    DIVIDE    [reduce using rule 5 (expr)]
    $default  reduce using rule 5 (expr)


State 12

    5 expr: expr • PLUS expr
    6     | expr • MINUS expr
    6     | expr MINUS expr •
    7     | expr • TIMES expr
    8     | expr • DIVIDE expr

    PLUS    shift, and go to state 6
    MINUS   shift, and go to state 7
    TIMES   shift, and go to state 8
    DIVIDE  shift, and go to state 9

    PLUS      [reduce using rule 6 (expr)]
    MINUS     [reduce using rule 6 (expr)]
    TIMES     [reduce using rule 6 (expr)]
    DIVIDE    [reduce using rule 6 (expr)]
    $default  reduce using rule 6 (expr)


State 13

    5 expr: expr • PLUS expr
    6     | expr • MINUS expr
    7     | expr • TIMES expr
    7     | expr TIMES expr •
    8     | expr • DIVIDE expr

    PLUS    shift, and go to state 6
    MINUS   shift, and go to state 7
    TIMES   shift, and go to state 8
    DIVIDE  shift, and go to state 9

    PLUS      [reduce using rule 7 (expr)]
    MINUS     [reduce using rule 7 (expr)]
    TIMES     [reduce using rule 7 (expr)]
    DIVIDE    [reduce using rule 7 (expr)]
    $default  reduce using rule 7 (expr)


State 14

    5 expr: expr • PLUS expr
    6     | expr • MINUS expr
    7     | expr • TIMES expr
    8     | expr • DIVIDE expr
    8     | expr DIVIDE expr •

    PLUS    shift, and go to state 6
    MINUS   shift, and go to state 7
    TIMES   shift, and go to state 8
    DIVIDE  shift, and go to state 9

    PLUS      [reduce using rule 8 (expr)]
    MINUS     [reduce using rule 8 (expr)]
    TIMES     [reduce using rule 8 (expr)]
    DIVIDE    [reduce using rule 8 (expr)]
    $default  reduce using rule 8 (expr)
